# cmake-rpath-experiment

./: CMakeLists.txt  LICENSE  README.md  compile.sh  myapp.cc  mylib.cc  mylib.hh
